--- a/portfolio/templates/portfolio/project_detail.html
+++ b/portfolio/templates/portfolio/project_detail.html
@@ -1,18 +1,37 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block page_top_title %}
+    <h2>{{ title }}</h2>
+{% endblock page_top_title %}
+
 {% block content %}
 
-        <div class="card text-white border-secondary bg-dark mb-3">
-            <div class="card-header border-secondary">
-                <h2>Project #{{ project.id }}</h2>
-            </div>
-
-            <div class="card-body">
-                <h2 class="card-title">{{ project.title }}</h2>
-                <p class="card-text">{{ project.description }}</p>
-            </div>
-
+    <div class="card text-white border-secondary bg-dark mb-3">
+        <div class="card-header border-secondary">
+            <h2>Project #{{ project.id }}</h2>
         </div>
+
+        <div class="card-body">
+            <h2 class="card-title">{{ project.title }}</h2>
+            <p class="card-text">{{ project.description }}</p>
+        </div>
+
+        {% if project.website or project.technology %}
+            <div class="card-footer border-secondary">
+                {% if project.website %}
+                    <p class="card-text">Website: <a href="{{ project.website.url }}">{{ project.website }}</a></p>
+                {% endif %}
+                {% if project.technology %}
+                    <div class="card-text">
+                        Made with:
+                        <a href="{{ project.technology.website }}">{{ project.technology }}</a>
+                        <br />
+                        <span>{{ project.technology.description }}</span>
+                    </div>
+                {% endif %}
+            </div>
+        {% endif %}
+    </div>
 
 {% endblock content %}
