--- a/portfolio/templates/portfolio/project_list.html
+++ b/portfolio/templates/portfolio/project_list.html
@@ -1,27 +1,47 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block page_top_title %}
+    <h2>{{ title }}</h2>
+{% endblock page_top_title %}
+
 {% block content %}
-
     {% for project in projects %}
-        <div class="card text-white border-secondary bg-dark shadow mb-3">
-            <div class="card-header border-secondary">
-                <h2>Project #{{ project.id }}</h2>
-            </div>
-
-            <div class="card-body">
-                <h2 class="card-title">{{ project.title }}</h2>
-                <p class="card-text">{{ project.description }}</p>
-
-            </div>
-
-            <div class="card-footer border-secondary">
-                <div class="btn-group-vertical d-block" role="group" aria-label="Comments Group">
+        {% if project.featured %}
+            <div class="card jumbotron jumbotron-fluid rounded border-secondary bg-dark shadow">
+                <div class="container">
+                <h1 class="display-4 font-italic">Featured Project</h1>
+                    <h1 class="display-4">{{ project.title }}</h1>
+                    <p class="lead">{{ project.snippet }}</p>
                     <a href="{{ project.get_absolute_url }}" class="btn btn-primary">Read More</a>
                 </div>
             </div>
-
-        </div>
-
+        {% endif %}
     {% endfor %}
+
+    <div class="row">
+        {% for project in projects %}
+            {% if not project.featured %}
+                <div class="col-lg-4">
+                    <div class="card text-white border-secondary bg-dark shadow mb-3">
+                        <div class="card-header border-secondary">
+                            <h2>Project #{{ project.id }}</h2>
+                        </div>
+
+                        <div class="card-body">
+                            <h2 class="card-title">{{ project.title }}</h2>
+                            <p class="card-text">{{ project.snippet }}</p>
+                        </div>
+
+                        <div class="card-footer border-secondary">
+                            <div class="btn-group-vertical d-block" role="group" aria-label="">
+                                <a href="{{ project.get_absolute_url }}" class="btn btn-primary">Read More</a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            {% endif %}
+        {% endfor %}
+    </div>
 {% endblock content %}
