--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -228,6 +228,10 @@
                                                   width="50" alt="Khodok's Logo"/></a>
             </div>
 
+            <div class="col-sm d-none d-sm-block my-2">
+                <a href="http://www.djangoproject.com/"><img src="https://www.djangoproject.com/m/img/badges/djangopowered126x54.gif" border="0" alt="Powered by Django." title="Powered by Django." /></a>
+            </div>
+
             <div class="col-sm"><a href="{% url 'blog:latest' %}"
                                    class="btn btn-dark btn-outline-light">Latest Post</a>
             </div>
