--- a/blog/templates/blog/postcomments.html
+++ b/blog/templates/blog/postcomments.html
@@ -7,19 +7,21 @@
                 <div class="card-header">
                     <h4>{{ comment.author }}
                         <span class="float-right">
-                            {% if not comment.approved_comment %}
-                                <a class="btn btn-light" href="{% url 'blog:comment_remove' pk=comment.pk %}"><span
-                                        class="iconify" data-icon="foundation:page-remove"
-                                        data-inline="false"></span></a>
+                            <div class="btn-group d-flex col-12 col-lg-5 p-0" role="group" aria-label="Comments Group">
+                                {% if not comment.approved_comment %}
+                                    <a class="btn btn-light" href="{% url 'blog:comment_remove' pk=comment.pk %}"><span
+                                            class="iconify" data-icon="foundation:page-remove"
+                                            data-inline="false"></span></a>
 
-                                <a class="btn btn-light" href="{% url 'blog:comment_approve' pk=comment.pk %}"><span
-                                        class="iconify" data-icon="emojione-monotone:ok-button"
-                                        data-inline="false"></span></a>
-                            {% endif %}
+                                    <a class="btn btn-light" href="{% url 'blog:comment_approve' pk=comment.pk %}"><span
+                                            class="iconify" data-icon="emojione-monotone:ok-button"
+                                            data-inline="false"></span></a>
+                                {% endif %}
 
-                            <a class="btn btn-light" href="{% url 'blog:edit_post_comment' pk=comment.pk %}">
-                                <span class="iconify" data-icon="ant-design:edit-filled" data-inline="false"></span>
-                            </a>
+                                <a class="btn btn-light" href="{% url 'blog:edit_post_comment' pk=comment.pk %}">
+                                    <span class="iconify" data-icon="ant-design:edit-filled" data-inline="false"></span>
+                                </a>
+                            </div>
                         </span>
                     </h4>
                 </div>
