--- a/khoBlog/static/css/variables.scss
+++ b/khoBlog/static/css/variables.scss
@@ -1,8 +1,8 @@
-$palette_primary: rgb(95, 69, 117);
+$palette_primary: #5444a6;
 $palette_secondary: #444749;
-$palette_danger: #a74646;
+$palette_danger: #e63946;
 $palette_success: #5ced4c;
-$palette_warning: #c0bc40;
+$palette_warning: #f3b700;
 $palette_info: #45def5;
 
 $palette_light: #a59fee;
