--- a/blog/templates/blog/all_posts.html
+++ b/blog/templates/blog/all_posts.html
@@ -3,9 +3,9 @@
         <div class="jumbotron jumbotron-fluid border rounded border-secondary bg-dark mb-3 shadow">
             <div class="container">
                 <strong class="d-inline-block mb-2 text-uppercase font-italic">Featured Post</strong>
-                <h1 class="display-4">{{ post.featured_title }}</h1>
+                <h1 class="display-4">{% if post.featured_title %} {{ post.featured_title }} {% else %} {{ post.title }} {% endif %}</h1>
                 <p class="lead">{{ post.description }}</p>
-                <a href="{{ post.get_absolute_url }}" class="btn btn-primary">Read More</a>
+                <a href="{{ post.get_absolute_url }}" class="btn btn-primary">Continue Reading</a>
             </div>
         </div>
     {% endif %}
@@ -18,11 +18,11 @@
                 <div class="col">
                     <div class="card row no-gutters border rounded flex-md-row border-secondary bg-dark mb-3 shadow">
                         <div class="col p-4 d-flex flex-column">
-                            <strong class="d-inline-block mb-2 text-warning">{{ post.categories.all|first|capfirst }}</strong>
-                            <h3 class="mb-0">{{ post.featured_title }}</h3>
+                            <strong class="d-inline-block mb-2"><a class="text-warning" href="{{ post.categories.first.get_absolute_url }}">{{ post.categories.first|capfirst }}</a></strong>
+                            <h3 class="mb-0">{% if post.featured_title %} {{ post.featured_title }} {% else %} {{ post.title }} {% endif %}</h3>
                             <div class="mb-1 text-muted">{% include 'blog/postdates.html' %}</div>
-                            <p class="mb">{{ post.description }}</p>
-                            <a href="{{ post.get_absolute_url }}">Continue reading</a>
+                            <p class="mb-auto">{{ post.description }}</p>
+                            <a href="{{ post.get_absolute_url }}">Continue Reading</a>
                         </div>
                     </div>
                 </div>
