--- a/blog/templates/blog/post_modale.html
+++ b/blog/templates/blog/post_modale.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <a href="{{ post.get_absolute_url }}" class="btn btn-primary">Read More</a>
+                        <a href="{{ post.get_absolute_url }}" class="btn btn-primary">Continue Reading</a>
                     </div>
                 </div>
 
@@ -54,7 +54,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <a href="{{ post.get_absolute_url }}" class="btn btn-primary">Read More</a>
+                        <a href="{{ post.get_absolute_url }}" class="btn btn-primary">Continue Reading</a>
                     </div>
                 </div>
 
@@ -73,7 +73,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <a href="{{ post.get_absolute_url }}#comments" class="btn btn-primary">Read More</a>
+                        <a href="{{ post.get_absolute_url }}#comments" class="btn btn-primary">Continue Reading</a>
                     </div>
                 </div>
             </div>
