--- a/blog/templates/blog/postdates.html
+++ b/blog/templates/blog/postdates.html
@@ -1,17 +1,17 @@
 <div class="d-none d-xl-block">
-    <p class="postPubliDate">{{ post.created_date|date:'l, dS \o\f F Y' }}</p>
+    <p class="postPubliDate mb-auto text-muted">{{ post.created_date|date:'l, dS \o\f F Y' }}</p>
 
     {% if post.published_date %}
-        <p class="postPubliDate"><span class="d-none d-xl-inline">{{ post.published_date|date:'l, dS \o\f F Y' }}</p>
+        <p class="postPubliDate mb-auto text-muted"><span class="d-none d-xl-inline">{{ post.published_date|date:'l, dS \o\f F Y' }}</p>
     {% endif %}
 
     {% if post.modified_date %}
-        <p class="postPubliDate"><span class="d-none d-xl-inline">Last {{ post.modified_date|date:'l, dS \o\f F Y' }}</p>
+        <p class="postPubliDate mb-auto text-muted"><span class="d-none d-xl-inline">Last {{ post.modified_date|date:'l, dS \o\f F Y' }}</p>
     {% endif %}
 </div>
 
 <div class="d-xl-none">
     {% if post.published_date %}
-        <p class="postPubliDate">{{ post.published_date|date:'dS M Y' }}</p>
+        <p class="postPubliDate mb-auto text-muted">{{ post.published_date|date:'dS M Y' }}</p>
     {% endif %}
 </div>
