small tiny change on search bar

--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -204,9 +204,9 @@
                     <form action="{% url 'blog:search_results' %}" method="get">
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text" id="basic-addon1">Search</span>
+                                <span class="input-group-text bg-dark text-white border-secondary" id="basic-addon1">Search</span>
                             </div>
-                            <input type="text" class="form-control" id="post_search" placeholder="Search a post" name="q"
+                            <input type="text" class="form-control bg-dark border-secondary" id="post_search" placeholder="Search a post" name="q"
                                 aria-label="search" aria-describedby="basic-addon1">
                         </div>
                     </form>
